stylesheet.less
/* ... */
.menu-subsection-promoted {
	border: 1px solid fadeout(@color-swatch2, 80%);
}

.menu-subsection-wrapper,
.blog-post-metadata {
	padding: 12px 20px 18px;
}

.dietary-icon {
	background-color: fadeout(@color-swatch2, 95%);
	border: 1px solid fadeout(@color-swatch2, 85%)!important;
	padding: 0 5px;
}

// Slideshow
.widget.responsiveslideshow .slideshow-widget {
	.btn-prev, .btn-next {
		text-indent: 1000px;
		overflow: hidden;
		height: 30px;
		width: 30px;
		top: 50%;
		margin-top: -15px;
		&:before {
			content: "";
			display: block;
			border: 5px solid transparent;
			position: absolute;
			top: 10px;
			left: 11px;
			width: 0;
			height: 0;
		}
	}
	.btn-next:before {
		border-left-color: @color-swatch2;
		left: 13px;
	}
	.btn-prev:before {
		border-right-color: @color-swatch2;
		left: 6px;
	}
}

.widget.responsiveslideshow .slideshow-widget .btn-prev,
.widget.responsiveslideshow .slideshow-widget .btn-next,
.widget.responsiveslideshow .slideshow-widget .btn-play {
	background-color: fadeout(@color-swatch1, 30%);
}

.widget.responsiveslideshow {
	.slideshow-widget .btn-play, .btn-prev, .btn-next {
		-webkit-transition: opacity .2s;
		-moz-transition: opacity .2s;
		-ms-transition: opacity .2s;
		transition: opacity .2s;
		opacity: .25;
	}
	&:hover {
		.slideshow-widget .btn-play, .btn-prev, .btn-next {
			opacity: .75;
			&:hover {
				opacity: 1;
			}
		}
	}
	.content-wrapper {
		background: fadeout(@color-swatch1, 25%);
		text-shadow: none;
		.title {
			font-weight: @font-swatch3-font-weight;
		}
		.title,
		.description {
			color: @color-swatch5;
		}
		.title,
		.description {
			padding: 6px;
			display: block;
		}
	}
}

.widget.responsiveslideshow .slideshow-widget-controls .dot {
	border-radius: 100%;
	border: 1px solid @color-swatch2;
	background-color: @color-swatch1;
	box-shadow: inset 0 0 0 3px @color-swatch1;
	&.selected {
		border: 1px solid @color-swatch2;
		background: @color-swatch2;
	}
}

.widget.responsiveslideshow:hover span.btn-play,
.widget.responsiveslideshow .slideshow-widget:hover .btn-play.pause {
	&:before, &:after {
		width: 8px;
		height: 26px;
		background: @color-swatch2;
		border: 0;
		top: 27px;
		left: 28px;
	}
	&:after {
		left: 42px;
	}
}

.widget.responsiveslideshow .slideshow-widget .btn-play {
	text-indent: -99999px;
	width: 80px;
	height: 80px;
	top: 50%;
	left: 50%;
	margin-left: -40px;
	margin-top: -40px;
	&:before, &:after {
		content: "";
		display: block;
		position: absolute;
		width: 0;
		height: 0;
		border: 20px solid transparent;
		border-left-color: @color-swatch2;
		left: 32px;
		top: 31%;
		border-top-width: 15px;
		border-bottom-width: 15px;
	}
	&:hover {
		&:before, &:after {
			top: 31%;
		}
	}
}

// Ecommerce
.widget.ecomproduct .ecom-product .btn.ecom-product-add-to-cart-btn .text:before,
.widget.ecombasket .ecombasket-pull p:before {
	background-image: image('/images/icon-basket.png');
	height: 15px;
	width: 19px;
	margin: 0 14px 0 0;
	top: 3px;
}
.svg {
	.widget.ecomproduct .ecom-product .btn.ecom-product-add-to-cart-btn .text:before,
	.widget.ecombasket .ecombasket-pull p:before {
		background-image: image('/images/icon-basket.svg');
	}
}

.ecom-productslist-image-wrap {
	border: 1px solid darken(@color-swatch1, 10%);
	margin-bottom: 8px;
}

.widget.ecombasket .ecombasket-list-container ul li,
.widget.ecomcheckout table tr th,
.widget.ecomcheckout table tr td {
	border-color: darken(@color-swatch1, 10%);
}

.ecom-productslist-title, .ecom-productslist-title a {
	font-size: bkscale(@font-swatch2-font-size, 0.7);
	line-height: bkscale(@font-swatch2-line-height, 0.7);
}

.widget.ecombasket {
	padding: 10px 0;
}

.ecom-product-image-list {
	li {
		cursor: pointer;
	}
}

.widget.ecomcheckout table tr {
	th:nth-child(1),
	td:nth-child(1) {
		vertical-align: middle;
	}
}

// Footer
.template-footer {
	padding: 30px 0 50px;
	border-top: 1px solid darken(@color-swatch1, 10%);
}

.template-nav {
    @media @tablet {
        width: 100% !important;
    }
}

// Tablet
@media @tablet {
	.header-container {
		border-bottom: none;
	}
	.template-header .row {
		margin: 0;
	}
	.widget .extendednavigation a.pull {
		right: 10px;
		top: 22px;
	}
	.widget .extendednavigation a.pull:after {
		top: 3px;
		right: 7px;
	}
	.widget .extendednavigation > ul {
		#menu-item_1 {
			border-left: none;
		}
		padding-top: 0;
		li {
			border-right: none;
			border-bottom-color: darken(@color-swatch1, 10%);
			padding: 0;
			a, &.folder > .text {
				padding: 15px 20px;
			}
		}
		li:hover ul {
			border-top: 1px solid darken(@color-swatch1, 10%);
			margin-top: 0;
			right: 0;
		}
		li.folder:after {
			right: 5px;
			top: 47%;
		}
	}
	.productlist-display-form {
		label {
			display: inline-block;
			width: 19%;
		}
		select {
			width: 80%;
		}
	}
	.widget.feature .feature-bgimg .content {
		.spare {
			margin-right: 25%;
			width: 75%;
		}
	}
}

@media (max-width: 769px) {
	.widget .extendednavigation a.pull {
		right: 0;
		top: -43px;
	}
}

@media @mobile {
	.widget.feature .feature-bgimg .content {
		padding-top: 30px;
		.spare {
			padding: 15px;
		}
	}
	.productlist-display-form {
		select, label {
			width: 100%;
		}
	}
}

